[gd_scene load_steps=32 format=3 uid="uid://c7ycb57houxl1"]

[ext_resource type="Script" path="res://Elements/function/player/player.gd" id="1_f2by1"]
[ext_resource type="PackedScene" uid="uid://cft1b4l0aljye" path="res://Elements/function/info/info.tscn" id="2_r67s4"]
[ext_resource type="Texture2D" uid="uid://djwowo0gdnhek" path="res://Art/textures/mouse_base.png" id="3_1eetr"]
[ext_resource type="PackedScene" uid="uid://co66d8wf4n3fv" path="res://Art/blend/assets/crosshair.blend" id="3_fx0ja"]
[ext_resource type="Material" uid="uid://b6kkipn5s7ecp" path="res://Art/materials/cursor.tres" id="4_5haak"]
[ext_resource type="Texture2D" uid="uid://dmnjpb8ox2bsu" path="res://Art/textures/mouse1-1.png" id="4_mgded"]
[ext_resource type="Texture2D" uid="uid://cvguvo850eb22" path="res://Art/textures/mouse1-2.png" id="5_tu8r8"]
[ext_resource type="AudioStream" uid="uid://w2v2x3att67l" path="res://Art/audio/click.wav" id="6_8os6d"]
[ext_resource type="AudioStream" uid="uid://eiiqal51bdu" path="res://Art/audio/player_select.wav" id="7_ymuqw"]
[ext_resource type="AudioStream" uid="uid://bdxfhhvgttnt5" path="res://Art/audio/player_death.wav" id="8_i6jga"]
[ext_resource type="AudioStream" uid="uid://bwu6q554kl8jd" path="res://Art/audio/player_hurt.wav" id="9_222lu"]
[ext_resource type="AudioStream" uid="uid://bk7fdh3m3au1n" path="res://Art/audio/dialogue.wav" id="10_8cnec"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jofc1"]
albedo_color = Color(0.431373, 0.647059, 0.407843, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7nubc"]
material = SubResource("StandardMaterial3D_jofc1")

[sub_resource type="PrismMesh" id="PrismMesh_u4gd0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_virh7"]
size = Vector3(2, 2, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ppsuc"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="TorusMesh" id="TorusMesh_e6sua"]
material = SubResource("StandardMaterial3D_ppsuc")
inner_radius = 3.955
outer_radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4qe3w"]
albedo_color = Color(1, 0, 0, 1)
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_g5di6"]
material = SubResource("StandardMaterial3D_4qe3w")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j7m3i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uiem3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2e1ws"]
size = Vector3(2, 3, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1odvh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btmbw"]
bg_color = Color(0.188235, 1, 0.113725, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqrcn"]
bg_color = Color(0.752941, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr4wr"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_gdws8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_mgded")
}, {
"duration": 1.0,
"texture": ExtResource("5_tu8r8")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_bnsgp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerModel:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.431373, 0.647059, 0.407843, 1)]
}

[sub_resource type="Animation" id="Animation_rew3f"]
resource_name = "hurt"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerModel:mesh:material:albedo_color")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.431373, 0.647059, 0.407843, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(0.431373, 0.647059, 0.407843, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nf3c7"]
_data = {
"RESET": SubResource("Animation_bnsgp"),
"hurt": SubResource("Animation_rew3f")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
floor_constant_speed = true
floor_max_angle = 1.22173
script = ExtResource("1_f2by1")

[node name="PlayerModel" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7nubc")

[node name="Arrow" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 1)
mesh = SubResource("PrismMesh_u4gd0")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerModel/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_virh7")

[node name="HoldPoint" type="Marker3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)

[node name="CollisionDetection" type="RayCast3D" parent="PlayerModel"]
top_level = true
target_position = Vector3(0, 0, 3.545)
debug_shape_custom_color = Color(1, 1, 1, 1)

[node name="DropIndicator" type="MeshInstance3D" parent="PlayerModel"]
mesh = SubResource("TorusMesh_e6sua")
skeleton = NodePath("../..")

[node name="3D-CursorModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
mesh = SubResource("SphereMesh_g5di6")
skeleton = NodePath("../Cursor/Area3D")

[node name="Info" parent="." instance=ExtResource("2_r67s4")]
health = 20.0
max_health = 20.0
invincibility_frames = 0.05
TakeDamageFromRigidBodies = false
DamagePlayerOnPlayerCollision = false

[node name="CollisionShape3D" parent="Info/Hitbox" index="0"]
shape = SubResource("CapsuleShape3D_j7m3i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_uiem3")

[node name="CentralCameraPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0.4, 0)

[node name="Camera3D" type="Camera3D" parent="CentralCameraPoint"]
transform = Transform3D(1, 0, 0, 0, 0.390731, 0.920505, 0, -0.920505, 0.390731, 0, 24, 11)
doppler_tracking = 2
fov = 60.0
size = 39.544

[node name="RayCast3D" type="RayCast3D" parent="CentralCameraPoint/Camera3D"]
visible = false
target_position = Vector3(0, 0, -5)

[node name="Cursor" type="Marker3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, -4)
gizmo_extents = 3.0

[node name="Area3D" type="Area3D" parent="Cursor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cursor/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_2e1ws")

[node name="crosshair" parent="Cursor/Area3D" instance=ExtResource("3_fx0ja")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="Cube" parent="Cursor/Area3D/crosshair" index="0"]
material_override = ExtResource("4_5haak")

[node name="Cube_001" parent="Cursor/Area3D/crosshair" index="1"]
material_override = ExtResource("4_5haak")

[node name="Cube_002" parent="Cursor/Area3D/crosshair" index="2"]
material_override = ExtResource("4_5haak")

[node name="Cube_003" parent="Cursor/Area3D/crosshair" index="3"]
material_override = ExtResource("4_5haak")

[node name="Cube_004" parent="Cursor/Area3D/crosshair" index="4"]
material_override = ExtResource("4_5haak")

[node name="Cube_005" parent="Cursor/Area3D/crosshair" index="5"]
material_override = ExtResource("4_5haak")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogue" type="RichTextLabel" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 190.0
grow_horizontal = 2
pivot_offset = Vector2(250, 75)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true

[node name="ColorRect" type="ColorRect" parent="HUD/Dialogue"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="DelayBetweenCharacters" type="Timer" parent="HUD/Dialogue"]
one_shot = true

[node name="RemoveCharacters" type="Timer" parent="HUD/Dialogue"]
wait_time = 5.0
one_shot = true

[node name="HurtVFX" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Timer" type="Timer" parent="HUD/HurtVFX"]

[node name="Health" type="ProgressBar" parent="HUD"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -189.0
offset_right = 180.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(180, 25)
theme_override_styles/background = SubResource("StyleBoxFlat_1odvh")
theme_override_styles/fill = SubResource("StyleBoxFlat_btmbw")
max_value = 20.0
value = 10.0
allow_greater = true
allow_lesser = true
show_percentage = false

[node name="HealthWhite" type="ProgressBar" parent="HUD/Health"]
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -50.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(180, 25)
theme_override_styles/background = SubResource("StyleBoxFlat_nqrcn")
theme_override_styles/fill = SubResource("StyleBoxFlat_lr4wr")
max_value = 20.0
value = 12.0
show_percentage = false

[node name="EnemyHealth" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -1180.0
offset_right = -870.0
offset_bottom = -1165.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(45, 7)
theme_override_styles/background = SubResource("StyleBoxFlat_nqrcn")
theme_override_styles/fill = SubResource("StyleBoxFlat_btmbw")
max_value = 20.0
value = 10.0
show_percentage = false

[node name="Hints" type="RichTextLabel" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -258.0
offset_right = 150.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
scroll_active = false

[node name="Timer" type="Timer" parent="HUD/Hints"]
wait_time = 6.0
one_shot = true

[node name="PauseMenu" type="ColorRect" parent="HUD"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 613.0
offset_bottom = 540.0
grow_vertical = 2
color = Color(0.533333, 0.533333, 0.533333, 0.490196)

[node name="ResumeButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 404.0
offset_right = 408.0
offset_bottom = 486.0
text = "resume"

[node name="RestartButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 499.0
offset_right = 408.0
offset_bottom = 581.0
text = "restart level"

[node name="QuitButton" type="Button" parent="HUD/PauseMenu"]
layout_mode = 0
offset_left = 188.0
offset_top = 593.0
offset_right = 408.0
offset_bottom = 675.0
text = "quit to menu"

[node name="Indicator" type="TextureRect" parent="HUD"]
texture_filter = 2
texture_repeat = 1
layout_mode = 0
offset_left = -31.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = 31.0
pivot_offset = Vector2(31, 31)
texture = ExtResource("3_1eetr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HUD/Indicator"]
visible = false
position = Vector2(60, 60)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_gdws8")
autoplay = "default"
frame_progress = 0.798396

[node name="DeathScreen" type="ColorRect" parent="HUD"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.117647, 0.141176, 0.352941)

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -210.0
offset_right = 140.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(140, 62)
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]DEAD"

[node name="DeathRestartButton" type="Button" parent="HUD/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -41.0
offset_right = 110.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(110, 41)
text = "restart level"

[node name="DeathQuitButton" type="Button" parent="HUD/DeathScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 82.0
offset_right = 110.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
text = "quit to menu"

[node name="LevelCompleted" type="ColorRect" parent="HUD"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 0.352941)

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/LevelCompleted"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 50)
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]level complete"

[node name="Delay" type="Timer" parent="HUD/LevelCompleted"]
wait_time = 3.0
one_shot = true

[node name="FootstepDelay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Audio" type="Node" parent="."]

[node name="PlayerWalk" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_8os6d")
volume_db = -10.0

[node name="PlayerSelect" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_ymuqw")
volume_db = -20.0

[node name="PlayerDeath" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_i6jga")
volume_db = -20.0

[node name="PlayerHurt" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_222lu")
volume_db = -20.0

[node name="Dialogue" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_8cnec")
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nf3c7")
}

[connection signal="death" from="Info" to="." method="_on_info_death"]
[connection signal="takeDamage" from="Info" to="." method="_on_info_take_damage"]
[connection signal="timeout" from="HUD/Dialogue/RemoveCharacters" to="." method="_on_remove_characters_timeout"]
[connection signal="timeout" from="HUD/Hints/Timer" to="." method="_hinttext_timeout"]
[connection signal="pressed" from="HUD/PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HUD/DeathScreen/DeathRestartButton" to="." method="_on_death_restart_button_pressed"]
[connection signal="pressed" from="HUD/DeathScreen/DeathQuitButton" to="." method="_on_death_quit_button_pressed"]
[connection signal="timeout" from="HUD/LevelCompleted/Delay" to="." method="_on_delay_timeout"]

[editable path="Info"]
[editable path="Cursor/Area3D/crosshair"]
